almost done with page 3, finished 1 and 2.  Still needs a lot of work

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,7 @@
 body
 {
 	background-color: black;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
+
 }
 
 @font-face        								/* Linking the fonts for the page */					
@@ -13,75 +10,186 @@ body
 	src: url("images/computer_7.ttf");
 }
 
-#userInputTable									/*Adjust the positon of the table first page */
+#login-modal								/*first page user log in */
 {
-	top: 30%;
-	left: 38%;
-	position: fixed;
+	text-align: center;
+	width: 75%;
+	margin: 0 auto;
+	margin-top: 270px;
 }
 
+#new-user-modal								/*first page new user log in */
+{
+	text-align: center;
+	width: 75%;
+	font-size: 15px;
+	margin: 0 auto;
+	margin-top: 240px;
+}
+
+.form-control							/* width of the input for our user input */
+{
+	width: 400px;
+	margin: 0 auto;
+	background-color: grey;
+	color: #4bfe31;
+}
+
+.btn
+{
+	background-color: black;
+	border-color: #4bfe31;
+	color: #4bfe31;
+}
 #readyUp										/* Adjust the button on first page to go to second page */
 {
 	background-color: black;
 	border-color: #4bfe31;
-	left: 48%;
-	top: 68%;
-	position: fixed;
-
+	color: #4bfe31;
 }
 
-.firstPageLayout								/* Adjust the font First Page here */
+#layoutFirstPage								/* Adjust the First page div id here with comp image and colors */
 {
 	
-	background-color: black;
 	color: #4bfe31;
 	font-family: computerFont;
 	font-size: 20px;
 	background-image: url("images/computermonitor1.png");
 	background-position: center;
 	background-repeat: no-repeat;
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
+	width: 75%;
+	margin: 0 auto;
+	height: 800px;
+	margin-top: 50px;
+	
 }
 
-input                   						/* Adjust the background of the First Page Table */
+#secondPageLayout								/*Adust the second page Waiting on Player 2 Page */
 {
-	background-color: grey;
+	color: #4bfe31;
+	font-family: computerFont;
+	font-size: 20px;
+	background-image: url("images/computermonitor1.png");
+	background-position: center;
+	background-repeat: no-repeat;
+	width: 75%;
+	margin: 0 auto;
+	height: 800px;
+	margin-top: 50px;
+}
+
+h3 											/* Adjust the Waiting section on Page 2 */
+{
+	text-align: center;
+	width: 75%;
+	margin: 0 auto;
+	margin-top: 270px;
+}
+
+.thirdPageLayout						/* Adjusting the 3rd page main container class */
+{
+
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-top: 2%;
+	margin-bottom: 3%;
+	color: #4bfe31;
+	font-family: computerFont;
+	font-size: 20px;
+	height: 800px;
+}
+
+#page3HeaderSection						/*Adjusts the header on the 3rd page, The questions go in the section tag, not here */
+{
+	border-style: solid;
 	border-color: #4bfe31;
-	margin: 5px;	
-}
-
-#secondPageRow
-{
+	border-width: 5px;
+	text-align: center;
 	color: #4bfe31;
 	font-family: computerFont;
 	font-size: 20px;
+	height: 100px;
+	margin-bottom: 10px;
+
+}
+
+.coderSpot
+{
+	width: 100%;
+	height: 80%;
+	margin: 0 auto;
+
+}
+
+.codingArea
+{
+	display: table-cell;
+	height: 700px;
 	background-image: url("images/computermonitor1.png");
 	background-position: center;
 	background-repeat: no-repeat;
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
+	margin: 0 auto;
 }
 
-#waiting
+.symbolArea
 {
-	color: #4bfe31;
-	font-family: computerFont;
-	font-size: 20px;
-	position: fixed;
-	top: 40%;
-	left: 46%;
+	display: table-cell;
+	width: 10%;
 }
 
-.row											/* gets rid of the horizontal scroll bar on second page*/
+
+#userCodeOne
+{
+
+	border-style: solid;
+	border-color: #4bfe31;
+	border-width: 5px;
+	width: 450px;
+	height: 360px;
+	margin: 0 auto;
+	margin-top: 150px;
+}
+
+#userCodeTwo
+{
+	border-style: solid;
+	border-color: #4bfe31;
+	border-width: 5px;
+	width: 450px;
+	height: 360px;
+	margin: 0 auto;
+	margin-top: 150px;
+}
+
+#versusSymbolArea
 {
 	margin: 0 auto;
 }
 
+footer
+{
+	position: fixed;
+	width: 100%;
+	left: 0px;
+	bottom: 0px;
+}
 
+
+h4
+{
+	text-align: center;
+}
+
+
+
+
+
+
+
+
+
+/*  height: 80%;
+	width: 40%;
+	background-image: url("images/computermonitor1.png");
+	background-position: center;
+	background-repeat: no-repeat;       */ 
