--- a/CSS/style.css
+++ b/CSS/style.css
@@ -68,10 +68,22 @@ body, html {
 #other-player {
 	border: 5px solid #4bfe31;
 	width: 90%;
-	height: 100%;
+	height: 90%;
 	margin: auto;
 	padding: 5px;
 	font-size: 2em;
+}
+
+#check-code {
+	display: block;
+	margin: 5px auto 0;
+	background-color: black;
+	border-color: #4bfe31;
+	color: #4bfe31;
+}
+
+#check-code:focus {
+	outline: none;
 }
 
 /* Additional forms set initially to no display */
