Fixed style for error button

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -171,6 +171,12 @@ h5 {
 
 .err-btn {
 	margin-top: 20px;
+	background-color: black;
+	border-color: red;
+}
+
+.err-btn:focus {
+	outline: none;
 }
 
 #user-code-one {
