--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,13 @@
 /* Linking the fonts for the page */
 /*@font-face {
-	font-family: computerFont;
+	font-family: 'Overpass Mono', monospace;
 	src: url("images/computer_7.ttf");
 }*/
 
 body, html {
-	font-family: 'VT323', monospace;
+	font-family: 'Overpass Mono', monospace;
 	background-color: black;
-	color: #4bfe31;
+	color: #80c576;
 	height: 100%;
 }
 
@@ -28,7 +28,8 @@ body, html {
 	height: 500px;
 	padding: 50px;
 	/*background-image: url("images/computermonitor1.png");*/
-	border: solid 2px #4bfe31;
+	border: solid 2px #80c576;
+	border-radius: 15px;
 }
 
 #content {
@@ -37,6 +38,7 @@ body, html {
 
 #header-row {
 	height: 10%;
+	text-align: center;
 }
 
 #question-row {
@@ -44,6 +46,7 @@ body, html {
 }
 
 #question-text {
+	font-size:1.8em;
 	text-align: center;
 }
 
@@ -69,20 +72,21 @@ body, html {
 
 #current-player,
 #other-player {
-	border: 5px solid #4bfe31;
+	border: 3px solid #80c576;
+	border-radius: 15px;
 	width: 90%;
 	height: 90%;
 	margin: auto;
 	padding: 5px;
-	font-size: 2em;
+	font-size: 1.2em;
 }
 
 #check-code {
 	display: block;
 	margin: 5px auto 0;
 	background-color: black;
-	border-color: #4bfe31;
-	color: #4bfe31;
+	border-color: #80c576;
+	color: #80c576;
 }
 
 #check-code:focus {
@@ -100,14 +104,19 @@ body, html {
 .form-control {
 	width: 400px;
 	margin: 0 auto 10px;
-	background-color: grey;
-	color: #4bfe31;
+	background-color: #424141;
+	color: #80c576;
+}
+
+.form-control:focus {
+	border-color: #80c576;
+	outline: none;
 }
 
 .btn {
 	background-color: black;
-	border-color: #4bfe31;
-	color: #4bfe31;
+	border-color: #80c576;
+	color: #80c576;
 }
 
 
@@ -146,8 +155,8 @@ body, html {
 
 #play-again {
 	background-color: black;
-	border-color: #4bfe31;
-	color: #4bfe31;
+	border-color: #80c576;
+	color: #80c576;
 }
 
 h5 {
