--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,9 +120,24 @@ body, html {
 }
 
 
+/* Winner DIV styles*/
+#winner-div {
+	position: absolute;
+	margin: 10% 25%;
+	display: block;
+	width: 50%;
+	height: 200px;
+	text-align: center;
+	background: black;
+	border: 3px solid;
+}
 
+#winner-div > h2 {
+	line-height: 200px;
+	margin: 0;
+}
 
-/* GAME WON POPUP STYLES*/
+/* */
 .display-final-page {
 	font-size: 30px;
 	text-align: center;
