--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,7 +158,7 @@ textarea {
 /* Winner DIV styles*/
 #winner-div {
 	position: absolute;
-	margin: 10% 25%;
+	margin: 100px 25% 0;
 	display: block;
 	width: 50%;
 	height: 200px;
