Set initial content to display none
This is so the login modal will be seen first. We first show the login modal, then show the actual page, just so you don't get them out of order.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,6 +15,10 @@ body, html {
 	background-color: black;
 }
 
+#content {
+	display: none;
+}
+
 /*first page user log in */
 #login-modal,
 #new-user-modal {
