Removed blue button effect
On login page, hover status was set to display a blue color.  Made it consistent with the rest of the design

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -160,6 +160,14 @@ textarea {
 	color: #80c576;
 }
 
+.btn:hover {
+	background-color: #80c576;
+	border-color: #80c576;
+	outline: none;
+	color: black;
+	font-weight: 900;
+}
+
 
 /* Winner DIV styles*/
 #winner-div {
